@startuml

title __WEEK9-WEEK9_26.PHONESEARCH's Class Diagram__\n

  package  {
    class Main {
    }
  }
  

  package  {
    class Main {
    }
  }
  

  package  {
    interface MultipleEntryDictionary {
    }
  }
  

  package  {
    interface MultipleEntryDictionary {
    }
  }
  

  package  {
    class Person {
    }
  }
  

  package  {
    class Person {
    }
  }
  

  package  {
    class Phonebook {
    }
  }
  

  package  {
    class Phonebook {
    }
  }
  

  package  {
    class UserInterface {
    }
  }
  

  package  {
    class UserInterface {
    }
  }
  

  Phonebook -up-|> MultipleEntryDictionary
  Phonebook -up-|> MultipleEntryDictionary
  UserInterface o-- Phonebook : phoneBook
  UserInterface o-- Phonebook : phoneBook


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
